# jsonschema-cpp

./: AUTHORS  CMakeLists.txt  LICENSE
cmake/: FindJsonCPP.cmake
include/: CMakeLists.txt
include/jsonschemacpp/: adaptorjsoncpp.h  adaptors.h  draft4validator.h  exceptions.h  jsonschema.h  metaschema.h  schemastore.h  schematypes.h  utils.h  validatorbase.h  version.h.in
src/: CMakeLists.txt  draft4validator.cc  metaschema.cc  schemastore.cc  utils.cc  validatorbase.cc
tests/: CMakeLists.txt  main.cpp
